# dssp

./: .gitignore  INSTALL  Makefile.am  README.md  bump_version.bash  configure.ac  docker-compose.yml  run_test.sh
doc/: mkdssp.html
src/: align-2d.h  buffer.h  dssp.cpp  dssp.h  iocif.h  mas.cpp  mas.h  matrix.h  primitives-3d.h  structure.cpp  structure.h  utils.h
tests/: test_readpdb.cpp
